force-app/main/default/objects/Activity/fields/is_webLead_Task__c.field-meta.xml
<CustomField>
    <fullName>is_webLead_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is webLead Task</label>
    <type>Checkbox</type>
</CustomField>