force-app/main/default/objects/Activity/fields/Manager_N_2_Notified__c.field-meta.xml
<CustomField>
    <fullName>Manager_N_2_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager N+2 Notified</label>
    <type>Checkbox</type>
</CustomField>