force-app/main/default/objects/Activity/fields/TECH_Cloture_KO__c.field-meta.xml
<CustomField>
    <fullName>TECH_Cloture_KO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Cloture KO</label>
    <type>Checkbox</type>
</CustomField>