force-app/main/default/objects/Activity/fields/Temps_ecoule__c.field-meta.xml
<CustomField>
    <fullName>Temps_ecoule__c</fullName>
    <label>Temps écoulé (heures)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>